--- a/LocalNicoMyList/FolderView.xaml
+++ b/LocalNicoMyList/FolderView.xaml
@@ -143,7 +143,18 @@
     <Grid>
         <ListView Grid.Column="0" x:Name="_folderListView" ItemsSource="{Binding}" ItemTemplate="{DynamicResource FolderListDataTemplate}" SelectionChanged="_folderListView_SelectionChanged" SelectionMode="Single"
                         MouseLeftButtonDown="folderListView_MouseLeftButtonDown" MouseRightButtonDown="folderListView_MouseRightButtonDown"
-                        PreviewDragEnter="folderListView_PreviewDragEnter" PreviewDragLeave="folderListView_PreviewDragLeave">
+                        PreviewMouseLeftButtonDown="folderListView_PreviewMouseLeftButtonDown"
+                        PreviewMouseRightButtonDown="folderListView_PreviewMouseRightButtonDown"
+                        PreviewMouseMove="folderListView_PreviewMouseMove"
+                        PreviewDragEnter="folderListView_PreviewDragEnter"
+                        PreviewDragLeave="folderListView_PreviewDragLeave"
+                        QueryContinueDrag="folderListView_QueryContinueDrag"
+                        DragEnter="folderListView_DragEnter"
+                        DragOver="folderListView_DragOver"
+                        DragLeave="folderListView_DragLeave"
+                        Drop="folderListView_Drop"
+                        AllowDrop="True"
+                  >
             <ListView.Resources>
                 <ContextMenu x:Key="ItemContextMenu" Opened="ContextMenu_Opened" Closed="ContextMenu_Closed">
                     <MenuItem Header="追加" Click="addFolder_Click" />
@@ -153,16 +164,7 @@
             </ListView.Resources>
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem" BasedOn="{StaticResource {x:Type ListViewItem}}">
-                    <EventSetter Event="PreviewMouseLeftButtonDown" Handler="folderListViewItem_PreviewMouseLeftButtonDown"/>
-                    <EventSetter Event="PreviewMouseRightButtonDown" Handler="folderListViewItem_PreviewMouseRightButtonDown" />
-                    <EventSetter Event="PreviewMouseMove" Handler="folderListViewItem_PreviewMouseMove"/>
-                    <EventSetter Event="QueryContinueDrag" Handler="folderListViewItem_QueryContinueDrag"/>
-                    <EventSetter Event="DragEnter" Handler="folderListViewItem_DragEnter" />
-                    <EventSetter Event="DragLeave" Handler="folderListViewItem_DragLeave" />
-                    <EventSetter Event="DragOver" Handler="folderListViewItem_DragOver" />
-                    <EventSetter Event="Drop" Handler="folderListViewItem_Drop" />
                     <Setter Property="ContextMenu" Value="{StaticResource ItemContextMenu}" />
-                    <Setter Property="AllowDrop" Value="True" />
                 </Style>
             </ListView.ItemContainerStyle>
             <ListView.ContextMenu>
