--- a/LocalNicoMyList/FolderView.xaml
+++ b/LocalNicoMyList/FolderView.xaml
@@ -2,10 +2,11 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:LocalNicoMyList"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300" Loaded="UserControl_Loaded">
+             d:DesignHeight="300" d:DesignWidth="300">
     <UserControl.Resources>
         <Style x:Key="{x:Type ListViewItem}" TargetType="ListViewItem">
             <Setter Property="SnapsToDevicePixels" Value="true" />
@@ -140,21 +141,19 @@
             </Grid>
         </DataTemplate>
     </UserControl.Resources>
-    <Grid>
-        <ListView Grid.Column="0" x:Name="_folderListView" ItemsSource="{Binding}" ItemTemplate="{DynamicResource FolderListDataTemplate}" SelectionChanged="_folderListView_SelectionChanged" SelectionMode="Single"
+    <Grid x:Name="rootGrid">
+        <ListView Grid.Column="0" x:Name="_folderListView" ItemsSource="{Binding folderLVItemsSource}" ItemTemplate="{DynamicResource FolderListDataTemplate}" SelectionChanged="_folderListView_SelectionChanged" SelectionMode="Single"
                         MouseLeftButtonDown="folderListView_MouseLeftButtonDown" MouseRightButtonDown="folderListView_MouseRightButtonDown"
-                        PreviewMouseLeftButtonDown="folderListView_PreviewMouseLeftButtonDown"
                         PreviewMouseRightButtonDown="folderListView_PreviewMouseRightButtonDown"
-                        PreviewMouseMove="folderListView_PreviewMouseMove"
-                        PreviewDragEnter="folderListView_PreviewDragEnter"
-                        PreviewDragLeave="folderListView_PreviewDragLeave"
-                        QueryContinueDrag="folderListView_QueryContinueDrag"
                         DragEnter="folderListView_DragEnter"
                         DragOver="folderListView_DragOver"
                         DragLeave="folderListView_DragLeave"
                         Drop="folderListView_Drop"
                         AllowDrop="True"
                   >
+            <i:Interaction.Behaviors>
+                <local:FolderItemDragDropBehavior IsDragEnabled="{Binding Path=isFolderItemDragEnabled, Mode=TwoWay}"/>
+            </i:Interaction.Behaviors>
             <ListView.Resources>
                 <ContextMenu x:Key="ItemContextMenu" Opened="ContextMenu_Opened" Closed="ContextMenu_Closed">
                     <MenuItem Header="追加" Click="addFolder_Click" />
