--- a/LocalNicoMyList/MyListView.xaml
+++ b/LocalNicoMyList/MyListView.xaml
@@ -167,6 +167,7 @@
                         VirtualizingPanel.ScrollUnit="Pixel" MouseLeftButtonDown="videoListView_MouseLeftButtonDown" MouseRightButtonDown="videoListView_MouseRightButtonDown" >
             <i:Interaction.Behaviors>
                 <ddlv:AcceptDrop Specifications="{Binding dropSpecifications}" />
+                <local:MyListItemDragBehavior />
             </i:Interaction.Behaviors>
             <ListView.Resources>
                 <ContextMenu x:Key="ItemContextMenu">
@@ -176,9 +177,6 @@
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem" BasedOn="{StaticResource {x:Type ListViewItem}}">
                     <EventSetter Event="MouseDoubleClick" Handler="MyListListViewItem_MouseDoubleClick" />
-                    <EventSetter Event="PreviewMouseDown" Handler="MyListListViewItem_PreviewMouseDown" />
-                    <EventSetter Event="PreviewMouseMove" Handler="MyListListViewItem_PreviewMouseMove" />
-                    <EventSetter Event="PreviewMouseUp" Handler="MyListListViewItem_PreviewMouseUp" />
                     <Setter Property="ContextMenu" Value="{StaticResource ItemContextMenu}" />
                 </Style>
             </ListView.ItemContainerStyle>
