--- a/LocalNicoMyList/MyListView.xaml
+++ b/LocalNicoMyList/MyListView.xaml
@@ -6,6 +6,7 @@
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:local="clr-namespace:LocalNicoMyList"
              xmlns:ddlv="clr-namespace:DragDropListView"
+             xmlns:dwtb="clr-namespace:LocalNicoMyList.DirectWriteTextBlock"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="600">
     <UserControl.Resources>
@@ -107,8 +108,7 @@
                         <TextBlock Text="{Binding firstRetrieve, StringFormat=yyyy年MM月dd日\ hh時mm分}" FontSize="12" FontWeight="Bold" />
                         <TextBlock Text="投稿" FontSize="12" Margin="5,0,0,0"/>
                     </StackPanel>
-                    <TextBlock Text="{Binding title}" FontSize="16" FontWeight="Bold" />
-                    <!--<WebBrowser Height="50" local:BrowserBehavior.Html="{Binding HtmlToDisplay}" />-->
+                    <dwtb:DirectWriteTextBlock Text="{Binding title}" FontSize="16" FontWeight="Bold" />
                     <StackPanel Orientation="Horizontal">
                         <TextBlock Text="再生：" FontSize="12" />
                         <TextBlock Text="{Binding viewCounter, StringFormat={}{0:#\,0}}" FontSize="12" FontWeight="Bold"/>
